--- a/pixi.toml
+++ b/pixi.toml
@@ -1,10 +1,10 @@
 [project]
 name = "bench_pixi"
 version = "0.1.0"
-description = "Add a short description here"
-authors = ["Ruben Arts <ruben.arts@hotmail.com>"]
+description = "Benchmark for pixi"
+authors = ["Ruben Arts <ruben@prefix.dev>"]
 channels = ["conda-forge"]
-platforms = ["linux-64"]
+platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
 
 [tasks]
 start = """
@@ -21,4 +21,3 @@ hyperfine --warmup 1 --runs 5  --export-markdown hyperfine.md --export-json hype
 hyperfine = ">=1.18.0,<1.19"
 micromamba = ">=1.5.6,<1.6"
 conda = ">=24.1.2,<24.2"
-pixi = ">=0.15.1,<0.16"
