--- a/pixi.toml
+++ b/pixi.toml
@@ -9,21 +9,19 @@ platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
 [tasks]
 
 bench = """
-hyperfine --warmup 1 --runs 2  --export-markdown hyperfine.md --export-json hyperfine.json
---prepare 'rm pixi -rf'
- 'pixi init -i dummy_env.yml pixi' 
---prepare 'rm micromamba -rf'
- 'micromamba create --file dummy_env.yml -p micromamba/.env --yes' 
---prepare 'rm conda -rf'
+hyperfine --warmup 2 --runs 10  --export-markdown hyperfine.md --export-json hyperfine.json
+--prepare 'rm -rf pixi'
+ 'pixi init -i dummy_env.yml pixi && cd pixi && pixi install'
+--prepare 'rm -rf micromamba'
+ 'micromamba create --file dummy_env.yml -p micromamba/.env --yes'
+--prepare 'rm -rf conda'
  'conda env create -f dummy_env.yml -p conda/.env'
 """
 graph = "python graph.py"
-start = {depends_on = ["bench", "graph"]}
+start = { depends-on = ["bench", "graph"] }
 
 [dependencies]
-hyperfine = ">=1.18.0,<1.19"
-micromamba = ">=1.5.6,<1.6"
-conda = ">=24.1.2,<24.2"
-
-# plotting
-matplotlib = "*"
+hyperfine = ">=1.19.0,<2"
+micromamba = ">=2.0.5,<3"
+conda = ">=25.1.1,<26"
+matplotlib = ">=3.10.0,<4"
