--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest, macos-13]
-        pixi_version: [v0.39.2, v0.39.5, v0.40.0, v0.41.2]
+        pixi_version: [v0.39.1, v0.41.2]
     steps:
       - uses: actions/checkout@v4
       - uses: prefix-dev/setup-pixi@v0
@@ -25,8 +25,19 @@ jobs:
       - name: Rename and Upload Benchmark Results
         run: |
           mv hyperfine.json ${{ matrix.os }}_${{ matrix.pixi_version }}_bench-results.json
+          mv hyperfine.md ${{ matrix.os }}_${{ matrix.pixi_version }}_bench-results.md
 
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.os }}_${{ matrix.pixi_version }}_benchmark-results
           path: ${{ matrix.os }}_${{ matrix.pixi_version }}_bench-results.json
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.os }}_${{ matrix.pixi_version }}_benchmark-results
+          path: ${{ matrix.os }}_${{ matrix.pixi_version }}_bench-results.md
+
+      - name: Add summary to PR
+        run: |
+          echo "### ${{ matrix.os }} ${{ matrix.pixi_version }}" >> $GITHUB_STEP_SUMMARY
+          cat ${{ matrix.os }}_${{ matrix.pixi_version }}_bench-results.md >> $GITHUB_STEP_SUMMARY
