--- a/dummy_env.yml
+++ b/dummy_env.yml
@@ -1,11 +1,6 @@
 channels:
   - conda-forge
 dependencies:
-  - scipy 
-  - polars
-  - ipywidgets ==7.8.0
-  - seaborn
-  - matplotlib
-  - plotly
+  - python
   - pip:
     - pandoc
