--- a/dummy_env.yml
+++ b/dummy_env.yml
@@ -1,6 +1,11 @@
 channels:
   - conda-forge
 dependencies:
-  - python
+  - scipy
+  - polars
+  - ipywidgets ==7.8.0
+  - seaborn
+  - matplotlib
+  - plotly
   - pip:
     - pandoc
