--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -13,19 +13,21 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest, macos-13]
         pixi_version: [v0.39.1, v0.41.2]
+        environment: ["default", "dummy", "stress"]
     steps:
       - uses: actions/checkout@v4
       - uses: prefix-dev/setup-pixi@v0
         with:
           pixi-version: ${{ matrix.pixi_version }}
-          cache: false
+          cache: true
+          environment: ${{ matrix.environment }}
       - run: |
           pixi run bench
-
-
+          echo "### ${{ matrix.os }} ${{ matrix.pixi_version }}" >> $GITHUB_STEP_SUMMARY
+          pixi run chart >> $GITHUB_STEP_SUMMARY
       - name: Add summary to PR
         run: |
-          echo "### ${{ matrix.os }} ${{ matrix.pixi_version }}" >> $GITHUB_STEP_SUMMARY
+
           cat hyperfine.md >> $GITHUB_STEP_SUMMARY
 
       - name: Rename and Upload Benchmark Results
