--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -12,19 +12,22 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest, macos-13]
-        pixi_version: [v0.39.1, v0.41.2]
+        pixi_version: [v0.39.1, v0.41.3]
         environment: ["default", "dummy", "stress"]
     steps:
       - uses: actions/checkout@v4
-      - uses: prefix-dev/setup-pixi@v0
+      - name: Set up Pixi
+        uses: prefix-dev/setup-pixi@v0
         with:
           pixi-version: ${{ matrix.pixi_version }}
           cache: true
           environment: ${{ matrix.environment }}
-      - run: |
-          pixi run bench
-          echo "### ${{ matrix.os }} ${{ matrix.pixi_version }} ${{ matrix.environment }}" >> $GITHUB_STEP_SUMMARY
-          pixi run chart >> $GITHUB_STEP_SUMMARY
+      - name: Run the benchmark
+        shell: bash
+        run: |
+            pixi run -e ${{ matrix.environment }} bench
+            echo "### ${{ matrix.os }} ${{ matrix.pixi_version }} ${{ matrix.environment }}" >> $GITHUB_STEP_SUMMARY
+            pixi run -e ${{ matrix.environment }} chart >> $GITHUB_STEP_SUMMARY
 
       - name: Add summary to PR
         run: |
