--- a/pixi.toml
+++ b/pixi.toml
@@ -7,7 +7,7 @@ platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
 [tasks]
 bench = """
 echo -----  Benchmark using $ENV_FILE -----;
-hyperfine --warmup 1 --runs 1  --export-markdown hyperfine.md --export-json hyperfine.json
+hyperfine --warmup 1 --runs 1  --export-markdown hyperfine.md --export-json hyperfine.json --show-output
 --prepare 'rm -rf pixi'
  'pixi init -i $ENV_FILE pixi && cd pixi && pixi install'
 --prepare 'rm -rf micromamba'
